@@ -20,6 +20,15 @@ div.document {
     background-color: {{ theme_sidebarbgcolor }};
 }
 
+div.documentwrapper {
+    float: left;
+    width: 100%;
+}
+
+div.bodywrapper {
+    margin: 0 0 0 230px;
+}
+
 div.body {
     background-color: {{ theme_bgcolor }};
     color: {{ theme_textcolor }};
