@@ -1,6 +1,9 @@
 Release 0.6.2 (in development)
 ==============================
 
+* #150: Fix display of the "sphinxdoc" theme on Internet Explorer
+  versions 6 and 7.
+
 * #146: Don't fail to generate LaTeX when the user has an active
   ``.docutils`` configuration.
 
